# pkg/tidbcloud/v1beta1/serverless/privatelink/model_aws_endpoint_service.go
@@ -21,8 +21,12 @@ var _ MappedNullable = &AwsEndpointService{}
 // AwsEndpointService struct for AwsEndpointService
 type AwsEndpointService struct {
 	// The endpoint service name.
-	Name                 string  `json:"name"`
-	Region               *string `json:"region,omitempty"`
+	Name   string  `json:"name"`
+	Region *string `json:"region,omitempty"`
+	// The endpoint ID.
+	EndpointId *string `json:"endpointId,omitempty"`
+	// The availability zones of the endpoint.
+	Azs                  []string `json:"azs,omitempty"`
 	AdditionalProperties map[string]interface{}
 }
 
@@ -102,6 +106,70 @@ func (o *AwsEndpointService) SetRegion(v string) {
 	o.Region = &v
 }
 
+// GetEndpointId returns the EndpointId field value if set, zero value otherwise.
+func (o *AwsEndpointService) GetEndpointId() string {
+	if o == nil || IsNil(o.EndpointId) {
+		var ret string
+		return ret
+	}
+	return *o.EndpointId
+}
+
+// GetEndpointIdOk returns a tuple with the EndpointId field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *AwsEndpointService) GetEndpointIdOk() (*string, bool) {
+	if o == nil || IsNil(o.EndpointId) {
+		return nil, false
+	}
+	return o.EndpointId, true
+}
+
+// HasEndpointId returns a boolean if a field has been set.
+func (o *AwsEndpointService) HasEndpointId() bool {
+	if o != nil && !IsNil(o.EndpointId) {
+		return true
+	}
+
+	return false
+}
+
+// SetEndpointId gets a reference to the given string and assigns it to the EndpointId field.
+func (o *AwsEndpointService) SetEndpointId(v string) {
+	o.EndpointId = &v
+}
+
+// GetAzs returns the Azs field value if set, zero value otherwise.
+func (o *AwsEndpointService) GetAzs() []string {
+	if o == nil || IsNil(o.Azs) {
+		var ret []string
+		return ret
+	}
+	return o.Azs
+}
+
+// GetAzsOk returns a tuple with the Azs field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *AwsEndpointService) GetAzsOk() ([]string, bool) {
+	if o == nil || IsNil(o.Azs) {
+		return nil, false
+	}
+	return o.Azs, true
+}
+
+// HasAzs returns a boolean if a field has been set.
+func (o *AwsEndpointService) HasAzs() bool {
+	if o != nil && !IsNil(o.Azs) {
+		return true
+	}
+
+	return false
+}
+
+// SetAzs gets a reference to the given []string and assigns it to the Azs field.
+func (o *AwsEndpointService) SetAzs(v []string) {
+	o.Azs = v
+}
+
 func (o AwsEndpointService) MarshalJSON() ([]byte, error) {
 	toSerialize, err := o.ToMap()
 	if err != nil {
@@ -115,6 +183,12 @@ func (o AwsEndpointService) ToMap() (map[string]interface{}, error) {
 	toSerialize["name"] = o.Name
 	if !IsNil(o.Region) {
 		toSerialize["region"] = o.Region
+	}
+	if !IsNil(o.EndpointId) {
+		toSerialize["endpointId"] = o.EndpointId
+	}
+	if !IsNil(o.Azs) {
+		toSerialize["azs"] = o.Azs
 	}
 
 	for key, value := range o.AdditionalProperties {
@@ -161,6 +235,8 @@ func (o *AwsEndpointService) UnmarshalJSON(data []byte) (err error) {
 	if err = json.Unmarshal(data, &additionalProperties); err == nil {
 		delete(additionalProperties, "name")
 		delete(additionalProperties, "region")
+		delete(additionalProperties, "endpointId")
+		delete(additionalProperties, "azs")
 		o.AdditionalProperties = additionalProperties
 	}
 
