# pkg/tidbcloud/v1beta1/serverless/privatelink/model_private_link_connection_service_attach_domains_body.go
@@ -1,0 +1,205 @@
+/*
+TiDB Cloud Serverless Private Link Connection Open API
+
+TiDB Cloud Serverless Private Link Connection Open API
+
+API version: v1beta1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package privatelink
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// checks if the PrivateLinkConnectionServiceAttachDomainsBody type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &PrivateLinkConnectionServiceAttachDomainsBody{}
+
+// PrivateLinkConnectionServiceAttachDomainsBody struct for PrivateLinkConnectionServiceAttachDomainsBody
+type PrivateLinkConnectionServiceAttachDomainsBody struct {
+	// The domain to attach.
+	AttachDomain AttachDomain `json:"attachDomain"`
+	// Only validate the request and return the domains without attaching them.
+	DryRun               *bool `json:"dryRun,omitempty"`
+	AdditionalProperties map[string]interface{}
+}
+
+type _PrivateLinkConnectionServiceAttachDomainsBody PrivateLinkConnectionServiceAttachDomainsBody
+
+// NewPrivateLinkConnectionServiceAttachDomainsBody instantiates a new PrivateLinkConnectionServiceAttachDomainsBody object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewPrivateLinkConnectionServiceAttachDomainsBody(attachDomain AttachDomain) *PrivateLinkConnectionServiceAttachDomainsBody {
+	this := PrivateLinkConnectionServiceAttachDomainsBody{}
+	this.AttachDomain = attachDomain
+	return &this
+}
+
+// NewPrivateLinkConnectionServiceAttachDomainsBodyWithDefaults instantiates a new PrivateLinkConnectionServiceAttachDomainsBody object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewPrivateLinkConnectionServiceAttachDomainsBodyWithDefaults() *PrivateLinkConnectionServiceAttachDomainsBody {
+	this := PrivateLinkConnectionServiceAttachDomainsBody{}
+	return &this
+}
+
+// GetAttachDomain returns the AttachDomain field value
+func (o *PrivateLinkConnectionServiceAttachDomainsBody) GetAttachDomain() AttachDomain {
+	if o == nil {
+		var ret AttachDomain
+		return ret
+	}
+
+	return o.AttachDomain
+}
+
+// GetAttachDomainOk returns a tuple with the AttachDomain field value
+// and a boolean to check if the value has been set.
+func (o *PrivateLinkConnectionServiceAttachDomainsBody) GetAttachDomainOk() (*AttachDomain, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.AttachDomain, true
+}
+
+// SetAttachDomain sets field value
+func (o *PrivateLinkConnectionServiceAttachDomainsBody) SetAttachDomain(v AttachDomain) {
+	o.AttachDomain = v
+}
+
+// GetDryRun returns the DryRun field value if set, zero value otherwise.
+func (o *PrivateLinkConnectionServiceAttachDomainsBody) GetDryRun() bool {
+	if o == nil || IsNil(o.DryRun) {
+		var ret bool
+		return ret
+	}
+	return *o.DryRun
+}
+
+// GetDryRunOk returns a tuple with the DryRun field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PrivateLinkConnectionServiceAttachDomainsBody) GetDryRunOk() (*bool, bool) {
+	if o == nil || IsNil(o.DryRun) {
+		return nil, false
+	}
+	return o.DryRun, true
+}
+
+// HasDryRun returns a boolean if a field has been set.
+func (o *PrivateLinkConnectionServiceAttachDomainsBody) HasDryRun() bool {
+	if o != nil && !IsNil(o.DryRun) {
+		return true
+	}
+
+	return false
+}
+
+// SetDryRun gets a reference to the given bool and assigns it to the DryRun field.
+func (o *PrivateLinkConnectionServiceAttachDomainsBody) SetDryRun(v bool) {
+	o.DryRun = &v
+}
+
+func (o PrivateLinkConnectionServiceAttachDomainsBody) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o PrivateLinkConnectionServiceAttachDomainsBody) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["attachDomain"] = o.AttachDomain
+	if !IsNil(o.DryRun) {
+		toSerialize["dryRun"] = o.DryRun
+	}
+
+	for key, value := range o.AdditionalProperties {
+		toSerialize[key] = value
+	}
+
+	return toSerialize, nil
+}
+
+func (o *PrivateLinkConnectionServiceAttachDomainsBody) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"attachDomain",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err
+	}
+
+	for _, requiredProperty := range requiredProperties {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varPrivateLinkConnectionServiceAttachDomainsBody := _PrivateLinkConnectionServiceAttachDomainsBody{}
+
+	err = json.Unmarshal(data, &varPrivateLinkConnectionServiceAttachDomainsBody)
+
+	if err != nil {
+		return err
+	}
+
+	*o = PrivateLinkConnectionServiceAttachDomainsBody(varPrivateLinkConnectionServiceAttachDomainsBody)
+
+	additionalProperties := make(map[string]interface{})
+
+	if err = json.Unmarshal(data, &additionalProperties); err == nil {
+		delete(additionalProperties, "attachDomain")
+		delete(additionalProperties, "dryRun")
+		o.AdditionalProperties = additionalProperties
+	}
+
+	return err
+}
+
+type NullablePrivateLinkConnectionServiceAttachDomainsBody struct {
+	value *PrivateLinkConnectionServiceAttachDomainsBody
+	isSet bool
+}
+
+func (v NullablePrivateLinkConnectionServiceAttachDomainsBody) Get() *PrivateLinkConnectionServiceAttachDomainsBody {
+	return v.value
+}
+
+func (v *NullablePrivateLinkConnectionServiceAttachDomainsBody) Set(val *PrivateLinkConnectionServiceAttachDomainsBody) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullablePrivateLinkConnectionServiceAttachDomainsBody) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullablePrivateLinkConnectionServiceAttachDomainsBody) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullablePrivateLinkConnectionServiceAttachDomainsBody(val *PrivateLinkConnectionServiceAttachDomainsBody) *NullablePrivateLinkConnectionServiceAttachDomainsBody {
+	return &NullablePrivateLinkConnectionServiceAttachDomainsBody{value: val, isSet: true}
+}
+
+func (v NullablePrivateLinkConnectionServiceAttachDomainsBody) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullablePrivateLinkConnectionServiceAttachDomainsBody) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
